src/test/ui/match/issue-50900.stderr
error[E0004]: non-exhaustive patterns: `Tag(Exif, _)` not covered
  --> $DIR/issue-50900.rs:15:11
   |
LL | pub struct Tag(pub Context, pub u16);
   | ------------------------------------- `Tag` defined here
...
LL |     match Tag::ExifIFDPointer {
   |           ^^^^^^^^^^^^^^^^^^^ pattern `Tag(Exif, _)` not covered
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms
   = note: the matched value is of type `Tag`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0004`.
